Bug#18408499 UNSIGNED BIGINT HIGH VALUES WRONG NUMERICAL COMPARISON RESULTS Bug#72046 UNSIGNED BIGINT high values wrong numerical comparison results

This is a followup to the patch for
Bug#17606942 ERROR RESULT WHEN USE BETWEEN...AND AGAINEST BIGINT UNSIGNED
which fixed several issues regarding bigint signed/unsigned comparisons.

This patch fixes signed comparison, with a large unsigned value,
similar to the previous patch for unsigned comparison, with a negative value.