sql/item_cmpfunc.cc
@@ -2859,12 +2859,19 @@ longlong compare_between_int_result(bool compare_as_temporal_dates,
     if (args[0]->unsigned_flag)
     {
       /*
+        Comparing as unsigned.
         value BETWEEN <some negative number> AND <some number>
         rewritten to
         value BETWEEN 0 AND <some number>
       */
       if (!args[1]->unsigned_flag && (longlong) a < 0)
         a = 0;
+    }
+    else
+    {
+      // Comparing as signed, but b is unsigned, and really large
+      if (args[2]->unsigned_flag && (longlong) b < 0)
+        b= LONGLONG_MAX;
     }
 
     if (!args[1]->null_value && !args[2]->null_value)
